# VizLens-public

./: LICENSE  README.md
AgentWebhook/: Readme.md  diagram.py  instructions.txt  webhook_server.py
CVServer/: CMakeLists-cpu.txt  CMakeLists.txt  clean.sh  detect_screen.py  image_encoding.py  main.cpp  main_access.cpp  main_access_gpu.cpp  main_access_gpu_working.cpp  main_build.cpp  main_gpu.cpp  run.sh  static.cpp
CVServer-old/: aiming_feedback.cpp  dynamic_display.cpp  facade_aiming.cpp  facade_aiming_dynamic.cpp  main_gpu_sqlite.cpp
CVServer/lib/: db_utils.cpp  db_utils.hpp  detect_screen.py  feedback_utils.cpp  feedback_utils.hpp  img_utils.cpp  img_utils.hpp  img_utils_gpu.cpp  img_utils_gpu.hpp  ocr_utils.cpp  ocr_utils.hpp  statemap_utils.cpp  statemap_utils.hpp
CVServer/lib/access/: db_utils.cpp  db_utils.hpp  feedback_utils.cpp  feedback_utils.hpp  img_utils.cpp  img_utils.hpp  statemap_utils.cpp  statemap_utils.hpp  visualization.cpp  visualization.hpp
FingerCap/: fingercap.stl
FingerTouchStudy/ClickCounter/: index.html  main.js  style.css
FingerTouchStudy/touch/: touch.pde
PythonServer/: manage.py  requirements.txt
PythonServer/PythonServer/: settings.py  urls.py  wsgi.py
PythonServer/rest_apis/: views.py
WebServer/: crop.php  label.php  visualization.php
WebServer/backup/: VizLensDynamic_empty.db  VizLensDynamic_structure.sql  backup.sh  backup_clear.sh  clear.sh  clear_video.py  setup.sh
WebServer/css/: arrow.psd  legion.css  overlay.css  style.css  turk.css
WebServer/db/access_14/: VizLensDynamic-01.db  VizLensDynamic-02.db  VizLensDynamic-03.db  VizLensDynamic-04.db  VizLensDynamic-05.db  VizLensDynamic-06.db  VizLensDynamic-07.db  VizLensDynamic-08.db  VizLensDynamic-09.db  VizLensDynamic-10.db  (+4 more)
WebServer/jcrop/: index.html
WebServer/php/: _db.php  checkCropAnswers.php  checkLabelAnswers.php  getButtonLayout.php  getButtonLayoutCrowdSight.php  getButtonLayoutOriginal.php  getFeedback.php  getFeedbackOld.php  getMasks.php  getObjectList.php  getOriginalImage.php  getReferenceImage.php  getVisualizationMasks.php  getVisualizationReferenceImage.php  logCrop.php  logLabel.php  setReference.php  uploadOriginal.php  uploadOriginalforCVServer.php  uploadVideo.php
WebServer/scripts/: cropPage.js  labelPage.js  legion.js  overlay.js  region.js  vars.js  visualizationPage.js  visualization_overlay.js
iOS/ApplianceReader/: ARAppDelegate.h  ARAppDelegate.m  ARCollectionViewInterfaceLayout.h  ARCollectionViewInterfaceLayout.m  ARDevViewController.h  ARDevViewController.mm  ARDevViewController.xib  ARInterface.h  ARInterface.m  ARInterfaceFeedbackViewController.h  ARInterfaceFeedbackViewController.m  ARInterfaceFeedbackViewController.xib  ARInterfaceListTableViewController.h  ARInterfaceListTableViewController.m  ARInterfaceListTableViewController.xib  ARInterfaceTableViewCell.xib  AROptionTableViewCell.xib  ARSettingsViewController.h  ARSettingsViewController.m  ARSettingsViewController.xib  ARSlider.h  ARSlider.m  ARTarget.h  ARTarget.m  ARTargetCollectionViewCell.h  ARTargetCollectionViewCell.m  ARTargetCollectionViewCell.xib  Info.plist  main.m  no_finger.aif  no_object.aif
iOS/ApplianceReader.xcodeproj/: project.pbxproj
(+12 files in other folders)
